{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1304,
  "lineage": "a935cdee-c55e-b4ab-d58d-a1848d52f484",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "final-bastion-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02beff30b02f52f59",
            "associate_with_private_ip": "10.0.1.10",
            "association_id": "eipassoc-0fe701f15e827c982",
            "domain": "vpc",
            "id": "eipalloc-02beff30b02f52f59",
            "instance": "i-0eddd8ea4b743f698",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04cb6feb68d367ff4",
            "private_dns": "ip-10-0-1-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-36-147-57.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.147.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.final-sub-pub-a",
            "aws_vpc.final-vpc",
            "data.aws_ami.amzn",
            "aws_instance.final-ec2-pub-bastion",
            "aws_internet_gateway.final-igw",
            "aws_security_group.final-sg-pub-bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "final-control-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097c6c6237c649e99",
            "associate_with_private_ip": "10.0.2.10",
            "association_id": "eipassoc-0ff8c3c833a3aa8fe",
            "domain": "vpc",
            "id": "eipalloc-097c6c6237c649e99",
            "instance": "i-0898db0712bc85c23",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-00ff93dd80a6bb7ae",
            "private_dns": "ip-10-0-2-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-35-61-43.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.61.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.final-vpc",
            "data.aws_ami.amzn",
            "aws_instance.final-ec2-pub-control",
            "aws_internet_gateway.final-igw",
            "aws_security_group.final-sg-pub-bastion",
            "aws_subnet.final-sub-pub-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "final-nip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0268bd8adb012f043",
            "association_id": "eipassoc-0f9e878e85c9e613b",
            "domain": "vpc",
            "id": "eipalloc-0268bd8adb012f043",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0542f0a2beacbc5d8",
            "private_dns": "ip-10-0-1-101.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.101",
            "public_dns": "ec2-3-38-0-200.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.0.200",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "final-nip"
            },
            "tags_all": {
              "Name": "final-nip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "final-ec2-pub-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0263588f2531a56bd",
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:instance/i-0eddd8ea4b743f698",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eddd8ea4b743f698",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "final-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04cb6feb68d367ff4",
            "private_dns": "ip-10-0-1-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-3-36-147-57.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.147.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1acdbd30cc20063",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097a671ad1a4cf2ac",
            "tags": {
              "Name": "final-ec2-pub-bastion"
            },
            "tags_all": {
              "Name": "final-ec2-pub-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dea023a6ada2b712"
            ]
          },
          "dependencies": [
            "aws_security_group.final-sg-pub-bastion",
            "aws_subnet.final-sub-pub-a",
            "aws_vpc.final-vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "final-ec2-pub-control",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0263588f2531a56bd",
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:instance/i-0898db0712bc85c23",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 120,
                "tags": {
                  "Name": "final-ebs"
                },
                "throughput": 0,
                "volume_id": "vol-02669d3cb41a9b8b3",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0898db0712bc85c23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "final-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ff93dd80a6bb7ae",
            "private_dns": "ip-10-0-2-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.10",
            "public_dns": "ec2-3-35-61-43.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.61.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c98647d41c89ad8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0790a8212bd940af5",
            "tags": {
              "Name": "final-ec2-pub-control"
            },
            "tags_all": {
              "Name": "final-ec2-pub-control"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dea023a6ada2b712"
            ]
          },
          "dependencies": [
            "aws_security_group.final-sg-pub-bastion",
            "aws_subnet.final-sub-pub-c",
            "aws_vpc.final-vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "final-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:internet-gateway/igw-0d0a245dc4c8ad518",
            "id": "igw-0d0a245dc4c8ad518",
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-igw"
            },
            "tags_all": {
              "Name": "final-igw"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "final-alb-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:loadbalancer/app/final-alb-web/da3d057a02a728e0",
            "arn_suffix": "app/final-alb-web/da3d057a02a728e0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "final-alb-web-251404750.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:loadbalancer/app/final-alb-web/da3d057a02a728e0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "final-alb-web",
            "security_groups": [
              "sg-08d06cba3102dfc0b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0790a8212bd940af5"
              },
              {
                "subnet_id": "subnet-097a671ad1a4cf2ac"
              }
            ],
            "subnets": [
              "subnet-0790a8212bd940af5",
              "subnet-097a671ad1a4cf2ac"
            ],
            "tags": {
              "Name": "final-alb-web"
            },
            "tags_all": {
              "Name": "final-alb-web"
            },
            "vpc_id": "vpc-020764b529a49f97c",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_vpc.final-vpc",
            "aws_security_group.final-sg-alb-web",
            "aws_subnet.final-sub-pub-a",
            "aws_subnet.final-sub-pub-c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "final-nlb-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:loadbalancer/net/final-nlb-was/30e3d4c2c0c52d94",
            "arn_suffix": "net/final-nlb-was/30e3d4c2c0c52d94",
            "dns_name": "final-nlb-was-30e3d4c2c0c52d94.elb.ap-northeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:loadbalancer/net/final-nlb-was/30e3d4c2c0c52d94",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "final-nlb-was",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019f0270a4c94945d"
              },
              {
                "subnet_id": "subnet-082d710be4c731e37"
              }
            ],
            "subnets": [
              "subnet-019f0270a4c94945d",
              "subnet-082d710be4c731e37"
            ],
            "tags": {
              "Name": "final-nlb-was"
            },
            "tags_all": {
              "Name": "final-nlb-was"
            },
            "vpc_id": "vpc-020764b529a49f97c",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "aws_vpc.final-vpc",
            "aws_subnet.final-sub-pri-a-web",
            "aws_subnet.final-sub-pri-c-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "final-alt-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:listener/app/final-alb-web/da3d057a02a728e0/d820fa46d2ae2e7b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:targetgroup/final-atg-web/56f29d72ac456091",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:listener/app/final-alb-web/da3d057a02a728e0/d820fa46d2ae2e7b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:loadbalancer/app/final-alb-web/da3d057a02a728e0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.final-sg-alb-web",
            "aws_subnet.final-sub-pub-a",
            "aws_subnet.final-sub-pub-c",
            "aws_vpc.final-vpc",
            "aws_lb.final-alb-web",
            "aws_lb_target_group.final-atg-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "final-nlt-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:listener/net/final-nlb-was/30e3d4c2c0c52d94/c2654c587c19ecd4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:targetgroup/final-ntg-was/5da8fb2f0722d2aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:listener/net/final-nlb-was/30e3d4c2c0c52d94/c2654c587c19ecd4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:loadbalancer/net/final-nlb-was/30e3d4c2c0c52d94",
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.final-nlb-was",
            "aws_lb_target_group.final-ntg-was",
            "aws_subnet.final-sub-pri-a-web",
            "aws_subnet.final-sub-pri-c-web",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "final-atg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:targetgroup/final-atg-web/56f29d72ac456091",
            "arn_suffix": "targetgroup/final-atg-web/56f29d72ac456091",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:targetgroup/final-atg-web/56f29d72ac456091",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "final-atg-web",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "final-atg-web"
            },
            "tags_all": {
              "Name": "final-atg-web"
            },
            "target_type": "instance",
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "final-ntg-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:targetgroup/final-ntg-was/5da8fb2f0722d2aa",
            "arn_suffix": "targetgroup/final-ntg-was/5da8fb2f0722d2aa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874623496211:targetgroup/final-ntg-was/5da8fb2f0722d2aa",
            "lambda_multi_value_headers_enabled": false,
            "name": "final-ntg-was",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "final-ntg-was"
            },
            "tags_all": {
              "Name": "final-ntg-was"
            },
            "target_type": "instance",
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "final-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0268bd8adb012f043",
            "connectivity_type": "public",
            "id": "nat-030f7d11c286676c4",
            "network_interface_id": "eni-0542f0a2beacbc5d8",
            "private_ip": "10.0.1.101",
            "public_ip": "3.38.0.200",
            "subnet_id": "subnet-097a671ad1a4cf2ac",
            "tags": {
              "Name": "final-ngw"
            },
            "tags_all": {
              "Name": "final-ngw"
            }
          },
          "dependencies": [
            "aws_eip.final-nip",
            "aws_subnet.final-sub-pub-a",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "final-pri-webwas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026e85d90abe2973d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-030f7d11c286676c4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026e85d90abe2973d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.final-nip",
            "aws_nat_gateway.final-ngw",
            "aws_route_table.final-rt-pri-webwas",
            "aws_subnet.final-sub-pub-a",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "final-rt-pri-webwas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:route-table/rtb-026e85d90abe2973d",
            "id": "rtb-026e85d90abe2973d",
            "owner_id": "874623496211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-030f7d11c286676c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final-rt-pri-web"
            },
            "tags_all": {
              "Name": "final-rt-pri-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "final-rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:route-table/rtb-091ff02d089ee45c0",
            "id": "rtb-091ff02d089ee45c0",
            "owner_id": "874623496211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d0a245dc4c8ad518",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final-rt-pub"
            },
            "tags_all": {
              "Name": "final-rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc",
            "aws_internet_gateway.final-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final-rt-pri-a-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043b1891871570d86",
            "route_table_id": "rtb-026e85d90abe2973d",
            "subnet_id": "subnet-065c6d6be927e689f"
          },
          "dependencies": [
            "aws_route_table.final-rt-pri-webwas",
            "aws_subnet.final-sub-pri-a-was",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final-rt-pri-c-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbeb2211d8b20ebb",
            "route_table_id": "rtb-026e85d90abe2973d",
            "subnet_id": "subnet-04b2766ad1f0f94e5"
          },
          "dependencies": [
            "aws_route_table.final-rt-pri-webwas",
            "aws_subnet.final-sub-pri-c-was",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final-rtass-pri-a-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098821f9c37baf18a",
            "route_table_id": "rtb-026e85d90abe2973d",
            "subnet_id": "subnet-019f0270a4c94945d"
          },
          "dependencies": [
            "aws_route_table.final-rt-pri-webwas",
            "aws_subnet.final-sub-pri-a-web",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final-rtass-pri-c-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0522a5e3418d0a0c6",
            "route_table_id": "rtb-026e85d90abe2973d",
            "subnet_id": "subnet-082d710be4c731e37"
          },
          "dependencies": [
            "aws_subnet.final-sub-pri-c-web",
            "aws_vpc.final-vpc",
            "aws_route_table.final-rt-pri-webwas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final-rtass-pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08668bb4dc57d1ec1",
            "route_table_id": "rtb-091ff02d089ee45c0",
            "subnet_id": "subnet-097a671ad1a4cf2ac"
          },
          "dependencies": [
            "aws_internet_gateway.final-igw",
            "aws_route_table.final-rt-pub",
            "aws_subnet.final-sub-pub-a",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "final-rtass-pub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096be1e2d58d0d49c",
            "route_table_id": "rtb-091ff02d089ee45c0",
            "subnet_id": "subnet-0790a8212bd940af5"
          },
          "dependencies": [
            "aws_internet_gateway.final-igw",
            "aws_route_table.final-rt-pub",
            "aws_subnet.final-sub-pub-c",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final-sg-alb-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:security-group/sg-08d06cba3102dfc0b",
            "description": "final-sg-alb-web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d06cba3102dfc0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "final-sg-alb-web",
            "name_prefix": "",
            "owner_id": "874623496211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-sg-alb-web"
            },
            "tags_all": {
              "Name": "final-sg-alb-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final-sg-pri-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:security-group/sg-095f901173c3f645b",
            "description": "final-sg-pri-db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095f901173c3f645b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dea023a6ada2b712"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final-sg-pri-db",
            "name_prefix": "",
            "owner_id": "874623496211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-sg-pri-db"
            },
            "tags_all": {
              "Name": "final-sg-pri-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.final-sg-pub-bastion",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final-sg-pri-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:security-group/sg-069d3b98fdaa138f4",
            "description": "final-sg-pri-was",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069d3b98fdaa138f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "final-sg-pri-was",
            "name_prefix": "",
            "owner_id": "874623496211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-sg-pri-was"
            },
            "tags_all": {
              "Name": "final-sg-pri-was"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final-sg-pri-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:security-group/sg-042c598240ee44395",
            "description": "final-sg-pri-web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042c598240ee44395",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "final-sg-pri-web",
            "name_prefix": "",
            "owner_id": "874623496211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-sg-pri-web"
            },
            "tags_all": {
              "Name": "final-sg-pri-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final-sg-pub-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:security-group/sg-0dea023a6ada2b712",
            "description": "final-sg-pub-bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dea023a6ada2b712",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 60080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 60080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final-sg-bastion",
            "name_prefix": "",
            "owner_id": "874623496211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final-sg-pub-bastion"
            },
            "tags_all": {
              "Name": "final-sg-pub-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pri-a-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-084e396e74d92ee39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.50.0/24",
            "id": "subnet-084e396e74d92ee39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pri-a-db"
            },
            "tags_all": {
              "Name": "final-sub-pri-a-db"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pri-a-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-065c6d6be927e689f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-065c6d6be927e689f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pri-a-was"
            },
            "tags_all": {
              "Name": "final-sub-pri-a-was"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pri-a-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-019f0270a4c94945d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-019f0270a4c94945d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pri-a-web"
            },
            "tags_all": {
              "Name": "final-sub-pri-a-web"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pri-c-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-078a19223457dbde0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.60.0/24",
            "id": "subnet-078a19223457dbde0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pri-c-db"
            },
            "tags_all": {
              "Name": "final-sub-pri-c-db"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pri-c-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-04b2766ad1f0f94e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.40.0/24",
            "id": "subnet-04b2766ad1f0f94e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pri-c-was"
            },
            "tags_all": {
              "Name": "final-sub-pri-c-was"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pri-c-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-082d710be4c731e37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-082d710be4c731e37",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pri-c-web"
            },
            "tags_all": {
              "Name": "final-sub-pri-c-web"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-097a671ad1a4cf2ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-097a671ad1a4cf2ac",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pub-a"
            },
            "tags_all": {
              "Name": "final-sub-pub-a"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-sub-pub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:subnet/subnet-0790a8212bd940af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0790a8212bd940af5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-sub-pub-c"
            },
            "tags_all": {
              "Name": "final-sub-pub-c"
            },
            "vpc_id": "vpc-020764b529a49f97c"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "final-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874623496211:vpc/vpc-020764b529a49f97c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08badb8dd746d996a",
            "default_route_table_id": "rtb-0203ad37b4d46fd89",
            "default_security_group_id": "sg-052a4f3aac47122e2",
            "dhcp_options_id": "dopt-d3f6b9b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-020764b529a49f97c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0203ad37b4d46fd89",
            "owner_id": "874623496211",
            "tags": {
              "Name": "final-vpc"
            },
            "tags_all": {
              "Name": "final-vpc"
            }
          }
        }
      ]
    }
  ]
}